@@ -1,3 +1,7 @@
+= master
+
+* Handle cases where Module#name raises an exception (jeremyevans) (#9)
+
 = 1.7.0 (2019-03-18)
 
 * Add :handle_reload_errors option, for returning backtrace with error if there is an exception when reloading (jeremyevans)
